ecmascript/parser/tests/test262-error-references/fail/3162394f5bc07198.js.stderr
error: Unexpected initializer in for in/of loop
 --> $DIR/tests/test262-parser/fail/3162394f5bc07198.js:1:5
  |
1 | for(const a = 0 in b);
  |     ^^^^^^^^^^^

